[package]
name = "async-crust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "join"
path = "src/join.rs"

[[bin]]
name = "future"
path = "src/future.rs"

[[bin]]
name = "async_trait"
path = "src/async_trait.rs"

[[bin]]
name = "mutex"
path = "src/mutex.rs"

[dependencies]
async-trait = "0.1.83"
futures = "0.3.31"
tokio = { version = "1.42.0", features = ["fs", "full", "io-std", "macros"] }
